@@ -7,16 +7,13 @@ import io.github.fabricators_of_create.porting_lib.data.ExistingFileHelper;
 import net.minecraft.core.Registry;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.data.CachedOutput;
-import net.minecraft.data.DataGenerator;
 import net.minecraft.data.DataProvider;
 import net.minecraft.data.PackOutput;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.entity.EntityType;
 import org.apache.commons.lang3.tuple.Triple;
-import twilightforest.TwilightForestMod;
 import twilightforest.init.TFRecipes;
 
-import java.io.IOException;
 import java.nio.file.Path;
 import java.util.List;
 import java.util.Map;
@@ -51,7 +48,7 @@ public abstract class TransformationPowderProvider implements DataProvider {
 					.filter(s -> BuiltInRegistries.ENTITY_TYPE.containsKey(BuiltInRegistries.ENTITY_TYPE.getKey(transform.getMiddle())))
 					.filter(s -> !this.builders.containsKey(s))
 					.filter(this::missing)
-					.collect(Collectors.toList());
+					.toList();
 
 			if (!list.isEmpty()) {
 				throw new IllegalArgumentException(String.format("Duplicate Transformation Powder Transformations: %s", list.stream().map(Objects::toString).collect(Collectors.joining(", "))));
